# peristera

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
fly-machine-gen/: Cargo.toml  README.md  spec.json
fly-machine-gen/src/: lib.rs
fly-machines-gen/: Cargo.toml  README.md  fixed_spec.json  justfile
fly-machines-gen/scripts/: fix_spec.py
fly-machines-gen/src/: lib.rs
peristera/: Cargo.toml
peristera/src/: app.rs  client.rs  errors.rs  lib.rs  machine.rs  volume.rs
