[package]
name = "fly-machine-gen"
version = "1.0.0"
description = "A low-level generated crate for the Fly.io Machines API using progenitor"
keywords = ["fly.io", "progenitor", "generated", "openapi"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.5.0"
futures-core = "0.3.30"
percent-encoding = "2.3.1"
reqwest = { version = "0.11.24", default-features = false, features = [
    "json",
    "stream",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
