[package]
name = "peristera"
version = "0.1.0"
description = "A high-level binding to the Fly.io Machines API"
readme = "../README.md"

authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
fly-machines-gen = { path = "../fly-machines-gen" }
reqwest = "0.12.4"
thiserror = "1.0.59"
url = "2.5.0"
